--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+server.port=8080
+github.client.id=7180aab434db36968a68
+github.client.secret=7c08219da861efe75713d7840a7226c478444d39
+github.redirect.uri=http://localhost:8080/callback
+spring.datasource.url=jdbc:mysql://localhost/community?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
