--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>8.0.16</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.10</version>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
