--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ github.redirect.uri=http://localhost:8080/callback
 spring.datasource.url=jdbc:mysql://localhost/community?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+mybatis.configuration.map-underscore-to-camel-case=true
